@@ -1,6 +1,9 @@
 package Module::Build::Base;
 
 use strict;
+use vars qw($VERSION);
+$VERSION = '0.2808_01';
+$VERSION = eval $VERSION;
 BEGIN { require 5.00503 }
 
 use Carp;
