@@ -1,6 +1,9 @@
 package Module::Build::PPMMaker;
 
 use strict;
+use vars qw($VERSION);
+$VERSION = '0.2808_01';
+$VERSION = eval $VERSION;
 
 # This code is mostly borrowed from ExtUtils::MM_Unix 6.10_03, with a
 # few tweaks based on the PPD spec at
